arrow2_convert/tests/ui/derive_on_trait.rs
use arrow2_convert::ArrowField;

#[derive(ArrowField)]
trait Test
{}

fn main() {}
